Added some changes, JAvaDoc, README, unit tests